# ezmsg-org.github.io

./: .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml
docs/source/: conf.py  index.rst
docs/source/explanations/: axisarray.rst  content-explanations.rst  ezmsg-design.rst
docs/source/extensions/: content-extensions.rst
docs/source/how-tos/basics/: install.rst  sandbox.rst
docs/source/reference/: content-reference.rst
docs/source/tutorials/: content-tutorials.rst  run.rst  start.rst
