[project]
name = "ezmsg-docs"
version = "1.0.0"
description = "Documentation for the ezmsg ecosystem"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    {include-group = "docs"},
]
docs = [
  "sphinx>=8.1.3",
  "pydata-sphinx-theme",
  "sphinxext.rediraffe",
  "myst_parser",
  "sphinx_copybutton",
  "sphinx_design",
]
